<resources>
    <string name="app_name">SDG - IFPR</string>
    <string name="nome">Nome</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="password_dica">******</string>
    <string name="TextoBoasVindas">Bem vindo!</string>
    <string name="textoConsulta">Bem vindo de Volta</string>

    <!-- googlemaps heatmap -->
    <string name="police_stations">Police Stations in Victoria</string>
    <string name="police_stations_url">http://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="medicare">Medicare Offices</string>
    <string name="medicare_url">http://data.gov.au/dataset/location-of-medicare-offices/resource/5d38e1be-4011-49c4-8b8b-75405eeb1088</string>
    <string-array name="heatmaps_datasets_array">
        <item>@string/police_stations</item>
        <item>@string/medicare</item>
    </string-array>
    <string name="attrib_format">Data from &lt;a href = "%s">data.gov.au&lt;/a>, modified under &lt;a href = \"http://creativecommons.org/licenses/by/3.0/au/\">CC BY 3.0 AU&lt;/a></string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nomeUsuario">nome_do_usuario_logado</string>
    <string name="emailUsuario">email_do_usuario@servidor.com</string>


    <string name="foco">Pontos com focos confirmados</string>
    <string-array name="heatmaps_datasets_array">
        <item>@string/foco</item>
    </string-array>

    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>

</resources>