<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    tools:context="com.projetos.ifpr.integrador.Cadastro"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/nome"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="center"
        android:id="@+id/nome"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:textSize="16dp"
        android:textStyle="bold"
        android:text="@string/login" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="center"
        android:id="@+id/login"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="@string/senha"/>

    <EditText
        android:id="@+id/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:gravity="left"
        android:hint="@string/password_dica"
        android:inputType="textPassword" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
    android:gravity="left"
    android:layout_gravity="left"
    android:text="Repita sua senha"/>
    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:hint="@string/password_dica"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:id="@+id/senha2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textStyle="bold"
        android:gravity="left"
        android:layout_gravity="left"
        android:text="Número de Celular"/>

    <com.github.pinball83.maskededittext.MaskedEditText
        android:id="@+id/masked_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:mask="(**) *****-****"
        app:notMaskedSymbol="*"
        app:maskIconColor="@color/colorPrimary"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/salvar"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/salvar"/>

</LinearLayout>
